--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		 <sonar.host.url>http://54.252.255.226:9000/</sonar.host.url>
+		 <sonar.host.url>http://65.2.4.89:9000/</sonar.host.url>
                 <sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>  
               
@@ -98,14 +98,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.25.224.250:9980/mithuntechnologies/repository/wallmart-releases/</url>
+	      <name>AK software soluations release Nexus Repository</name>
+	      <url>http://65.2.4.89:8081/repository/wallmart-dev-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.25.224.250:9980/mithuntechnologies/repository/wallmart-snapshot/</url>
+	      <name>AK software solutions snapshot Nexus Repository </name>
+	      <url>http://65.2.4.89:8081/repository/wallmart-dev-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
